# scoresim

./: .gitignore  Application.hs  Auxiliar.hs  ContestPrinter.hs  Form.hs  Generator.hs  HtmlContestPrinter.hs  Main.hs  My.hs  Parser.hs  ParserKattis.hs  README.md  Score.hs  Site.hs  State.hs  State2.hs  Teams.hs  Threads.hs  Tipes.hs  User.hs  UserTeams.hs  Utils.hs  problemas.txt  scoresim.cabal  site_key.txt  stack.yaml  tpalp.cabal
Html/: wf2013.html
Internos/: in.html  pre.txt
Scores/: wf2007.txt  wf2012.txt
Villagra/: Application.hi  Application.hs  Example.hs  Main.hi  Site.hi  Site.hs  site_key.txt  snap.cabal  users.json
snap/: snap.cabal~
snaplets/heist/templates/: _login.tpl  base.tpl  charge_file.tpl  charge_web.tpl  choose.tpl  chooseform.tpl  chooseform.tpl~  delete_team.tpl  index.tpl  new_submit.tpl  new_team.tpl  newcontestform.tpl  newcontestform.tpl~  teamform.tpl  tweetform.tpl  velocity.tpl
src/: Form.hs  ParserKattis.hs  Scoreboard.hs  Tipes.hs  User.hs
version1.0/: Generator.hs  Main.hs  Scoreboard.html
version1.0/Internos/: pos.txt
version1.0/Scores/: wf2012.html  wf2014.html  wf2015.html
